# vault-k8s-mapper

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: dependabot-merge.yaml
src/: k8s.py  main.py  vault.py  vault_test.py
